<resources>
    <string name="app_name">EDT_App</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="ensname1">Yacine CHALLAL</string>
    <string name="ensname2">HAMIDI Samir</string>
    <string name="ensname3">DIB Ahmed</string>
    <string name="ensname4">IMLOUL salima</string>
    <string name="ensname5">ROUABHIA Ahmed</string>

    <string name="mail1">y_challal@esi.dz</string>
    <string name="mail2">s_hamidi@esi.dz</string>
    <string name="mail3">a_dib@esi.dz</string>
    <string name="mail4">s_imloul@esi.dz</string>
    <string name="mail5">a_rouabhia@esi.dz</string>

    <string name="diplome1">Securité informatique</string>
    <string name="diplome2">Analyse mathematique</string>
    <string name="diplome3">Analyse Numerique</string>
    <string name="diplome4">Probalité</string>
    <string name="diplome5">Electronique fondamental</string>

    <string name="module1">IPLS</string>
    <string name="module2">ANALYSE</string>
    <string name="module3">ANUM</string>
    <string name="module4">PRST</string>
    <string name="module5">ELECF</string>

    <string name="moduleIpls">Module IPLS</string>
    <string name="ensIpls">Il est etudie par l ens Yacine CHALLAL</string>


    <string name="DetailsNom1">Interpretation des protocoles et logiciels securisés</string>
    <string name="DetailsNom2">Analyse mathematique</string>
    <string name="DetailsNom3">Analyse numerique</string>
    <string name="DetailsNom4">Probabilite et statistique</string>
    <string name="DetailsNom5">Alectronique fondamental</string>


    <string name="salle1">CYBER</string>
    <string name="salle2">S10</string>
    <string name="salle3">CP4</string>
    <string name="salle4">CP1</string>
    <string name="salle5">S20</string>

    <string name="senace1">TD</string>
    <string name="senace2">TP</string>
    <string name="senace3">COURS</string>
    <string name="senace4">PROJET</string>
    <string name="jour">Dimanche</string>
    <string name="deb">De 10:00 a 12:10</string>
    <string name="nomdesenace">TD IPLS</string>
    <string name="sallede">Dans la salle S4B</string>
    <string name="Details">Details</string>




    <string name="time08">08:30</string>
    <string name="time103">10:30</string>
    <string name="time100">10:00</string>
    <string name="time101">10:10</string>
    <string name="time104">10:40</string>
    <string name="time121">12:10</string>
    <string name="time124">12:40</string>
    <string name="time13">13:00</string>
    <string name="time15">15:00</string>
    <string name="time151">15:10</string>
    <string name="time171">17:10</string>

    <string name="date1">Avril,12 2020</string>
    <string name="date2">Avril,13 2020</string>
    <string name="date3">Avril,14 2020</string>
    <string name="date4">Avril,15 2020</string>
    <string name="date5">Avril,16 2020</string>


</resources>
