<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/nomSeanceView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/senace1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dateSeanceView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="21/09/2020"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomSeanceView"
        app:layout_constraintVertical_bias="0.027" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/salleSeanceView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salle1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/debSeanceView"
        app:layout_constraintVertical_bias="0.032" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/debSeanceView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateSeanceView"
        app:layout_constraintVertical_bias="0.027" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/FinSeanceView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/deb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.003"
        app:layout_constraintStart_toEndOf="@+id/debSeanceView"
        app:layout_constraintTop_toBottomOf="@+id/dateSeanceView"
        app:layout_constraintVertical_bias="0.001" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/moduleSeanceNameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/module1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/nomSeanceView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>
